Many small CSS fixes. Fixes for sidebar in mid-range widths. Fixes for search box in small and mid-range widths. Borders correctly rendered in dark modes at all widths.

--- a/styles/min-width-1500px/base.scss
+++ b/styles/min-width-1500px/base.scss
@@ -1,12 +1,6 @@
-body > *
-{
-	margin-left: 480px;
-}
 body.has-in-page-nav > *
 {
 	margin-right: 300px;
-	margin-left: 440px;
-	padding-left: 10px;
 }
 
 nav.breadcrumb
@@ -21,8 +15,11 @@ nav.breadcrumb
 article.page
 {
 	padding-right: 20px;
-	border-left: 1px solid transparent;
 	border-right: 1px solid transparent;
+}
+aside#sidebar
+{
+	border-right: 0px;
 }
 .has-in-page-nav header h1{
 	margin-right: 310px;
