--- a/styles/min-width-500px/base.scss
+++ b/styles/min-width-500px/base.scss
@@ -2,6 +2,10 @@ aside#sidebar
 {
 	left: -470px;
 	width: 430px;
+    -webkit-transition: all 100ms ease-in-out;
+    -moz-transition: all 100ms ease-in-out;
+    -o-transition: all 100ms ease-in-out;
+    transition: all 100ms ease-in-out;
 }
 body.sidebar-expanded > *
 {
