--- a/styles/search.scss
+++ b/styles/search.scss
@@ -83,10 +83,8 @@ article.page form
   font-weight: bold;
 }
 
-@media all and (max-width: 500px)
+aside#sidebar form.search
 {
-    aside#sidebar form.search
-    {
-    	margin-right: 20px;
-    }
+	margin: 5px 20px;
+	padding: 0px;
 }
