--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -1,7 +1,7 @@
 aside#sidebar {
     position: fixed;
     padding: 80px 30px 130px 3px;
-    top: 53px;
+    top: 54px;
     margin: 0px;
     left: -110%;
     bottom: -1px;
@@ -15,6 +15,11 @@ aside#sidebar {
 	box-sizing: border-box;
 	height: 100%;
 	overflow-y: auto;
+    -webkit-transition: left 300ms ease-in-out;
+    -moz-transition: left 300ms ease-in-out;
+	-o-transition: left 300ms ease-in-out;
+	border-right: 1px solid #007dc6;
+    transition: left 300ms ease-in-out;
 }
 
 nav.secondary
@@ -98,10 +103,6 @@ i.expandCollapseIcon {
     top: 0px;
     padding: 5px 15px;
     transform: rotate(0deg);
-    -webkit-transition: all 100ms ease-in-out;
-    -moz-transition: all 100ms ease-in-out;
-    -o-transition: all 100ms ease-in-out;
-    transition: all 100ms ease-in-out;
 }
 
 .treeview>li
