--- a/styles/themes/dark.scss
+++ b/styles/themes/dark.scss
@@ -1,14 +1,16 @@
 ---
 ---
 
+$background-color: #37373D;
+
 body
 {
-	background-color: #37373D;
+	background-color: $background-color;
 	color: #CDCDCD;
 
 	aside#sidebar
 	{
-		background-color: transparent;
+		background-color: $background-color;
 	}
 	nav.secondary
 	{
